--- a/lifecycle-data/products/microsoft-machine-learning-server-microsoft-r-server.yml
+++ b/lifecycle-data/products/microsoft-machine-learning-server-microsoft-r-server.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Machine Learning Server (Microsoft R Server)
-  description: Microsoft Machine Learning Server (Microsoft R Server) volgt het beleid voor moderne levenscyclus.
+  description: Microsoft Machine Learning Server (Microsoft R Server) volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 800ea9f3a33e2ea7ba45314ebd7986ebcb047bd8
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851766"
 name: Microsoft Machine Learning Server (Microsoft R Server)
 summary: >+
-  Microsoft Machine Learning Server (Microsoft R Server) volgt het beleid [voor moderne](/lifecycle/policies/modern) levenscyclus.
+  Microsoft Machine Learning Server (Microsoft R Server) volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 01/01/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](/machine-learning-server/resources-servicing-support)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/machine-learning-server/resources-servicing-support)"
