--- a/lifecycle-data/products/azure-power-bi-workspace-collection.yml
+++ b/lifecycle-data/products/azure-power-bi-workspace-collection.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Verzameling Azure Power BI-werkruimte
-  description: Azure Power BI Workspace Collection volgt het beleid voor moderne levenscyclus.
+  title: Azure Power BI-werkruimteverzameling
+  description: Azure Power BI-werkruimteverzameling volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: a95f325fa895563c498eca76aaa2b7978d393473
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851652"
-name: Verzameling Azure Power BI-werkruimte
+name: Azure Power BI-werkruimteverzameling
 summary: >
-  Azure Power BI Workspace Collection volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Azure Power BI-werkruimteverzameling volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > De ondersteuning is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - sql-server
 policyType: modern-online
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 03/31/2016
   endDate: 07/30/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/power-bi/developer/embedded/migrate-from-powerbi-embedded)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/power-bi/developer/embedded/migrate-from-powerbi-embedded)"
