--- a/lifecycle-data/products/dynamics-gp-2015.yml
+++ b/lifecycle-data/products/dynamics-gp-2015.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics GP 2015
-  description: Dynamics GP 2015 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics GP 2015 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: efca9971ae340c54b72a50d61dc1f2323278c9a3
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852101"
 name: Dynamics GP 2015
 summary: >+
-  Dynamics GP 2015 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics GP 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 02/18/2015
   endDate: 04/08/2025
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Aanvullende informatie en migratierichtlijnen](https://community.dynamics.com/gp/b/dynamicsgp/posts/microsoft-dynamics-gp-2016-r2-and-year-end-update-lifecycle-and-upgrade-services)\n* [Productinformatie](/dynamics-gp/)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Aanvullende gegevens en migratierichtlijnen](https://community.dynamics.com/gp/b/dynamicsgp/posts/microsoft-dynamics-gp-2016-r2-and-year-end-update-lifecycle-and-upgrade-services)\n* [Productgegevens](/dynamics-gp/)"
