--- a/lifecycle-data/products/dynamics-nav-40.yml
+++ b/lifecycle-data/products/dynamics-nav-40.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamiek NAV 4.0
-  description: Dynamics NAV 4.0 volgt het beleid voor vaste levenscyclus.
+  title: Dynamics NAV 4,0
+  description: Dynamics NAV 4.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 766b8f2b69ca45d1ff1620ce6787df299bb68955
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812517"
-name: Dynamiek NAV 4.0
-summary: "Dynamics NAV 4.0 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> De ondersteuning is beëindigd. \n"
+name: Dynamics NAV 4,0
+summary: "Dynamics NAV 4.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning is beëindigd. \n"
 products:
 - dynamics
 policyType: fixed-mainstream-only
