--- a/lifecycle-data/products/dynamics-sl-2011.yml
+++ b/lifecycle-data/products/dynamics-sl-2011.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics SL 2011
-  description: Dynamics SL 2011 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics SL 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1952cd7ae9c7c76d5679fa95a3d8f1f4ad88b14f
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851723"
 name: Dynamics SL 2011
 summary: >+
-  Dynamics SL 2011 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics SL 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -34,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 06/15/2011
   endDate: 01/14/2014
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
