--- a/lifecycle-data/products/entity-framework-core.yml
+++ b/lifecycle-data/products/entity-framework-core.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Kern van entiteitskader
-  description: Entity Framework Core volgt het beleid voor moderne levenscyclus.
+  title: Entity Framework Core
+  description: Entity Framework Core volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 635de4ebbcd4ff1061210469cd509fe9771be356
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851987"
-name: Kern van entiteitskader
+name: Entity Framework Core
 summary: >+
-  Entity Framework Core volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Entity Framework Core volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 06/27/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over levenscyclus - .NET Core](/lifecycle/faq/dotnet-core)\n* [Onderhoudsinformatie](https://github.com/dotnet/core/blob/master/microsoft-support.md)\n* [.NET-roadmap](https://github.com/dotnet/core/blob/master/roadmap.md)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over levenscyclus - .NET Core](/lifecycle/faq/dotnet-core)\n* [Onderhoudsinformatie](https://github.com/dotnet/core/blob/master/microsoft-support.md)\n* [.NET roadmap](https://github.com/dotnet/core/blob/master/roadmap.md)"
