--- a/lifecycle-data/products/excel-for-mac-2011.yml
+++ b/lifecycle-data/products/excel-for-mac-2011.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Excel voor Mac 2011
-  description: Excel voor Mac 2011 volgt het beleid voor een vaste levenscyclus.
+  description: Excel voor Mac 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 6fbc511fd70af039109ad1e301de765ad20e836c
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812511"
 name: Excel voor Mac 2011
 summary: >+
-  Excel voor Mac 2011 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Excel voor Mac 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 12/09/2010
   endDate: 10/10/2017
-content: "\n\n> [!NOTE]\n> De algemene ondersteuning voor Microsoft Office voor Mac 2011 wordt uitgebreid, zoals wordt weergegeven om klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden."
+content: "\n\n> [!NOTE]\n> De basisondersteuning voor Microsoft Office voor Mac 2011 wordt zoals weergegeven verlengd om alle klanten de standaard overgangstijdlijn van de levenscyclus te bieden."
