--- a/lifecycle-data/products/hyperv-server-2008-r2.yml
+++ b/lifecycle-data/products/hyperv-server-2008-r2.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Hyper-V Server 2008 R2
-  description: Hyper-V Server 2008 R2 volgt het beleid voor vaste levenscyclus.
+  description: Hyper-V Server 2008 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 6887524823a979fc8ea45c7745423de784efec7e
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812493"
 name: Hyper-V Server 2008 R2
-summary: "Hyper-V Server 2008 R2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder. \n"
+summary: "Hyper-V Server 2008 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
 - windows
 policyType: fixed
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 10/22/2009
   endDate: 04/10/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/windows-server/get-started/modernize-windows-server-2008)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows-server/get-started/modernize-windows-server-2008)"
