--- a/lifecycle-data/products/hyperv-server-2008.yml
+++ b/lifecycle-data/products/hyperv-server-2008.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Hyper-V Server 2008
-  description: Hyper-V Server 2008 volgt het beleid voor vaste levenscyclus.
+  description: Hyper-V Server 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: bd8d2e95bcfd7b35689eea4aab205a9e22550440
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812492"
 name: Hyper-V Server 2008
-summary: "Hyper-V Server 2008 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder. \n"
+summary: "Hyper-V Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
 - windows
 policyType: fixed
@@ -22,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 12/30/2008
   endDate: 01/14/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/windows-server/get-started/modernize-windows-server-2008)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows-server/get-started/modernize-windows-server-2008)"
