--- a/lifecycle-data/products/iis-media-services-40.yml
+++ b/lifecycle-data/products/iis-media-services-40.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: IIS Media Services 4.0
-  description: IIS Media Services 4.0 volgt het beleid voor de levenscyclus van componenten.
+  description: IIS Media Services 4.0 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 52297271a9bb92f999b37f70833442af5458ac62
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851808"
 name: IIS Media Services 4.0
 summary: >+
-  IIS Media Services 4.0 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  IIS Media Services 4.0 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 01/30/2011
-content: "\n\n> [!NOTE]\n> Deze release staat bekend als een component die de ondersteuningslevenscyclus van het bovenliggende hoofdproduct, Windows Server 2008, volgt"
+content: "\n\n> [!NOTE]\n> Deze release staat bekend als een onderdeel dat de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows Server 2008."
