--- a/lifecycle-data/products/internet-information-services-smooth-streaming-client-10.yml
+++ b/lifecycle-data/products/internet-information-services-smooth-streaming-client-10.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Internet Informatie Services Smooth Streaming Client 1.0
-  description: Internet Information Services Smooth Streaming Client 1.0 volgt het beleid voor de levenscyclus van componenten.
+  title: Internet Information Services Smooth Streaming Client 1.0
+  description: Internet Information Services Smooth Streaming Client 1.0 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: cff48fdf69039eed9e23b9534c01ea004fba6696
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812477"
-name: Internet Informatie Services Smooth Streaming Client 1.0
+name: Internet Information Services Smooth Streaming Client 1.0
 summary: >+
-  Internet Information Services Smooth Streaming Client 1.0 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Internet Information Services Smooth Streaming Client 1.0 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 09/05/2010
   endDate: 09/08/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/iis/media/on-demand-smooth-streaming/getting-started-with-iis-smooth-streaming)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/iis/media/on-demand-smooth-streaming/getting-started-with-iis-smooth-streaming)"
