--- a/lifecycle-data/products/microsoft-bitlocker-administration-and-monitoring-20.yml
+++ b/lifecycle-data/products/microsoft-bitlocker-administration-and-monitoring-20.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BitLocker-beheer en -controle 2.0
-  description: Microsoft BitLocker-beheer en -monitoring 2.0 volgt het beleid voor vaste levenscyclus.
+  title: Microsoft BitLocker Administration and Monitoring 2.0
+  description: Microsoft BitLocker Administration and Monitoring 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 5070cc5571cf5859fb0184860a7094fc4abc69eb
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851975"
-name: Microsoft BitLocker-beheer en -controle 2.0
+name: Microsoft BitLocker Administration and Monitoring 2.0
 summary: >+
-  Microsoft BitLocker-beheer en -monitoring 2.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BitLocker Administration and Monitoring 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 05/16/2013
   endDate: 01/13/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
