--- a/lifecycle-data/products/microsoft-bitlocker-administration-and-monitoring-25.yml
+++ b/lifecycle-data/products/microsoft-bitlocker-administration-and-monitoring-25.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BitLocker-beheer en -controle 2.5
-  description: Microsoft BitLocker-beheer en -monitoring 2.5 volgt het beleid voor vaste levenscyclus.
+  title: Microsoft BitLocker Administration en Monitoring 2.5
+  description: Microsoft BitLocker Administration and Monitoring 2.5 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: fe5d94e98de4c880815a7bad0a2ae5dd42a74600
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851974"
-name: Microsoft BitLocker-beheer en -controle 2.5
+name: Microsoft BitLocker Administration en Monitoring 2.5
 summary: >+
-  Microsoft BitLocker-beheer en -monitoring 2.5 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BitLocker Administration and Monitoring 2.5 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 05/01/2014
   endDate: 10/11/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
