--- a/lifecycle-data/products/microsoft-deployment-agent-2013.yml
+++ b/lifecycle-data/products/microsoft-deployment-agent-2013.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Deployment Agent 2013
-  description: Microsoft Deployment Agent 2013 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Deployment Agent 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d81680178f3fc6d72450bbf62cbf11ccb7ef8dc5
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851789"
 name: Microsoft Deployment Agent 2013
 summary: >+
-  Microsoft Deployment Agent 2013 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Deployment Agent 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
