--- a/lifecycle-data/products/microsoft-diagnostics-and-recovery-toolset-80.yml
+++ b/lifecycle-data/products/microsoft-diagnostics-and-recovery-toolset-80.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Diagnostics and Recovery Toolset 8.0
-  description: Microsoft Diagnostics and Recovery Toolset 8.0 volgt het beleid voor vaste levenscyclus.
+  title: Diagnose- en herstelhulpmiddelenset van Microsoft 8.0
+  description: Diagnose- en herstelhulpmiddelenset van Microsoft 8.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 38a98f28c3d9ef2fd1844a3083b3a6fcb52e1b5b
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851784"
-name: Microsoft Diagnostics and Recovery Toolset 8.0
+name: Diagnose- en herstelhulpmiddelenset van Microsoft 8.0
 summary: >+
-  Microsoft Diagnostics and Recovery Toolset 8.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Diagnose- en herstelhulpmiddelenset van Microsoft 8.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 11/01/2012
   endDate: 07/08/2014
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
