--- a/lifecycle-data/products/microsoft-forefront-identity-manager-2010.yml
+++ b/lifecycle-data/products/microsoft-forefront-identity-manager-2010.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Forefront Identity Manager 2010
-  description: Microsoft Forefront Identity Manager 2010 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Forefront Identity Manager 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 9b76ebc222ff94ed78ae77e18623f18557e8ac38
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812391"
 name: Microsoft Forefront Identity Manager 2010
 summary: >+
-  Microsoft Forefront Identity Manager 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Forefront Identity Manager 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 05/27/2010
   endDate: 10/11/2022
-content: "\n\n> [!NOTE]\n> De algemene en uitgebreide ondersteuning voor Microsoft Forefront Identity Manager 2010 wordt uitgebreid, zoals wordt weergegeven om alle klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden."
+content: "\n\n> [!NOTE]\n> De basis- en uitgebreide ondersteuning voor Microsoft Forefront Identity Manager 2010 wordt uitgebreid, zoals weergegeven, om alle klanten de standaard overgangstijdlijn voor de levenscyclus te bieden."
