--- a/lifecycle-data/products/microsoft-internet-information-services-100.yml
+++ b/lifecycle-data/products/microsoft-internet-information-services-100.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Internet Information Services 10.0
-  description: Microsoft Internet Information Services 10.0 volgt het beleid voor de levenscyclus van componenten.
+  description: Microsoft Internet Information Services 10.0 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 6ee9b2824e6fd7cff445f978c3a6294e7784abcb
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851778"
 name: Microsoft Internet Information Services 10.0
 summary: >+
-  Microsoft Internet Information Services 10.0 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft Internet Information Services 10.0 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 10/12/2016
   endDate: 01/11/2027
-content: "\n\n> [!NOTE]\n> Deze release staat bekend als een component die de ondersteuningslevenscyclus van het bovenliggende hoofdproduct, Windows Server 2016, volgt."
+content: "\n\n> [!NOTE]\n> Deze release staat bekend als een onderdeel dat de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows Server 2016."
