--- a/lifecycle-data/products/microsoft-iscsi-software-target-33.yml
+++ b/lifecycle-data/products/microsoft-iscsi-software-target-33.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft iSCSI-softwaredoel 3.3
-  description: Microsoft iSCSI Software Target 3.3 volgt het beleid voor de levenscyclus van componenten.
+  title: Microsoft iSCSI Software Target 3.3
+  description: Microsoft iSCSI Software Target 3.3 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: c8ae05506cdc5e83920e82e4cc6bcfef3c03863e
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851779"
-name: Microsoft iSCSI-softwaredoel 3.3
+name: Microsoft iSCSI Software Target 3.3
 summary: >
-  Microsoft iSCSI Software Target 3.3 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft iSCSI Software Target 3.3 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit onderdeel is beëindigd.
+  > De ondersteuning voor dit onderdeel is beëindigd.
 products:
 - windows
 policyType: component
