--- a/lifecycle-data/products/microsoft-lync-for-mac-2011.yml
+++ b/lifecycle-data/products/microsoft-lync-for-mac-2011.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Lync voor Mac 2011
-  description: Microsoft Lync voor Mac 2011 volgt het beleid voor een vaste levenscyclus.
+  description: Microsoft Lync voor Mac 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 207ed38b1b2ea1ec21b7f89d565df627ab2e7c42
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811813"
 name: Microsoft Lync voor Mac 2011
 summary: >+
-  Microsoft Lync voor Mac 2011 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Lync voor Mac 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 12/09/2010
   endDate: 10/09/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Skype voor Bedrijven op Mac](https://www.microsoft.com/download/details.aspx?id=54108)\n\n> [!NOTE]\n> Ondersteuning voor Microsoft Lync voor Mac 2011 wordt uitgebreid, zoals weergegeven om alle klanten een levenscyclusovergangstijdlijn te bieden naar Skype voor Bedrijven op Mac."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Skype voor Bedrijven op Mac](https://www.microsoft.com/download/details.aspx?id=54108)\n\n> [!NOTE]\n> Ondersteuning voor Microsoft Lync voor Mac 2011 is uitgebreid, zoals weergegeven, om alle klanten een tijdlijn voor de overgang van de levenscyclus naar Skype voor Bedrijven op Mac te bieden."
