--- a/lifecycle-data/products/microsoft-net-micro-framework-porting-kit-30.yml
+++ b/lifecycle-data/products/microsoft-net-micro-framework-porting-kit-30.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft .NET Micro Framework Porting Kit 3.0
-  description: Microsoft .NET Micro Framework Porting Kit 3.0 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft .NET Micro Framework Porting Kit 3.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: bceaa4d262839239519b3ea3244f762d88982921
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812752"
 name: Microsoft .NET Micro Framework Porting Kit 3.0
 summary: >
-  Microsoft .NET Micro Framework Porting Kit 3.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft .NET Micro Framework Porting Kit 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - dotnet
 policyType: fixed
