--- a/lifecycle-data/products/microsoft-office-communicator-mobile.yml
+++ b/lifecycle-data/products/microsoft-office-communicator-mobile.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Office Communicator Mobiel
-  description: Microsoft Office Communicator Mobile volgt het beleid voor een vaste levenscyclus.
+  title: Microsoft Office Communicator Mobile
+  description: Microsoft Office Communicator Mobile volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d1740abcef5c843ea1c87dd287111eb7d15ec9ad
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812735"
-name: Microsoft Office Communicator Mobiel
+name: Microsoft Office Communicator Mobile
 summary: >+
-  Microsoft Office Communicator Mobile volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Communicator Mobile volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 07/21/2006
   endDate: 10/11/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)"
