--- a/lifecycle-data/products/microsoft-office-groove-2007.yml
+++ b/lifecycle-data/products/microsoft-office-groove-2007.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Groove 2007
-  description: Microsoft Office Groove 2007 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office Groove 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b771dec5ab12ab49e3317d53aea8e91f5d95bd40
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812033"
 name: Microsoft Office Groove 2007
-summary: "Microsoft Office Groove 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Microsoft Office Groove 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - office
 policyType: fixed
@@ -22,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2007
   endDate: 10/10/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/office/troubleshoot/support/office-2007-not-support)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)"
