--- a/lifecycle-data/products/microsoft-office-xp-web-components-in-office-2003.yml
+++ b/lifecycle-data/products/microsoft-office-xp-web-components-in-office-2003.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Office XP-webonderdelen in Office 2003
-  description: Microsoft Office XP-webcomponenten in Office 2003 volgen het beleid voor levenscyclus van componenten.
+  title: Microsoft Office XP Web Components in Office 2003
+  description: Microsoft Office XP Web Components in Office 2003 volgt het levenscyclusbeleid voor onderdelen,
   ms.date: 07/28/2020
   ms.openlocfilehash: 71e1eeae85bb7963657d0aa63bbe6361221ea7a6
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811806"
-name: Microsoft Office XP-webonderdelen in Office 2003
+name: Microsoft Office XP Web Components in Office 2003
 summary: >+
-  Microsoft Office XP-webcomponenten in Office 2003 volgen het beleid voor levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Microsoft Office XP Web Components in Office 2003 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
