--- a/lifecycle-data/products/microsoft-solution-for-hosted-messaging-and-collaboration-35.yml
+++ b/lifecycle-data/products/microsoft-solution-for-hosted-messaging-and-collaboration-35.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft-oplossing voor gehoste berichten en samenwerking 3.5
-  description: Microsoft-oplossing voor gehoste berichten en samenwerking 3.5 volgt het beleid voor vaste levenscyclus.
+  title: Microsoft Solution for Hosted Messaging and Collaboration 3.5
+  description: Microsoft Solution for Hosted Messaging and Collaboration 3.5 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d7421b0e62de8f73f59e14a0986a880755bb6d59
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811792"
-name: Microsoft-oplossing voor gehoste berichten en samenwerking 3.5
+name: Microsoft Solution for Hosted Messaging and Collaboration 3.5
 summary: >+
-  Microsoft-oplossing voor gehoste berichten en samenwerking 3.5 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Solution for Hosted Messaging and Collaboration 3.5 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
