--- a/lifecycle-data/products/microsoft-solution-for-hosted-messaging-and-collaboration-40.yml
+++ b/lifecycle-data/products/microsoft-solution-for-hosted-messaging-and-collaboration-40.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft-oplossing voor gehoste berichten en samenwerking 4.0
-  description: Microsoft-oplossing voor gehoste berichten en samenwerking 4.0 volgt het beleid voor vaste levenscyclus.
+  title: Microsoft Solution for Hosted Messaging and Collaboration 4.0
+  description: Microsoft Solution for Hosted Messaging and Collaboration 4.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d5aad6d836257bdbd054a1e385c6268769a1da05
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811935"
-name: Microsoft-oplossing voor gehoste berichten en samenwerking 4.0
+name: Microsoft Solution for Hosted Messaging and Collaboration 4.0
 summary: >+
-  Microsoft-oplossing voor gehoste berichten en samenwerking 4.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Solution for Hosted Messaging and Collaboration 4.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
