--- a/lifecycle-data/products/microsoft-system-center-2012-r2-operations-manager.yml
+++ b/lifecycle-data/products/microsoft-system-center-2012-r2-operations-manager.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft System Center 2012 R2 Operations Manager
-  description: Microsoft System Center 2012 R2 Operations Manager volgt het beleid voor vaste levenscyclus.
+  description: Microsoft System Center 2012 R2 Operations Manager volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 57db6fbda015c2bbd55d4ec9621ed6cda6948a56
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851722"
 name: Microsoft System Center 2012 R2 Operations Manager
 summary: >+
-  Microsoft System Center 2012 R2 Operations Manager volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft System Center 2012 R2 Operations Manager volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 01/16/2014
   endDate: 07/12/2022
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Systeemcentrumdocumentatie](/system-center/#pivot=components&panel=components-all)\n* [Systeemcentrumbronnen](https://www.microsoft.com/system-center/resources)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [System Center-documentatie](/system-center/#pivot=components&panel=components-all)\n* [System Center-resources](https://www.microsoft.com/system-center/resources)"
