--- a/lifecycle-data/products/microsoft-system-center-capacity-planner-2007.yml
+++ b/lifecycle-data/products/microsoft-system-center-capacity-planner-2007.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft System Center Capacity Planner 2007
-  description: Microsoft System Center Capacity Planner 2007 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft System Center Capacity Planner 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 026bf977e513462e9f4e5cb0509144ac26e9b9f7
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812347"
 name: Microsoft System Center Capacity Planner 2007
 summary: >
-  Microsoft System Center Capacity Planner 2007 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft System Center Capacity Planner 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - msc
 policyType: fixed
