--- a/lifecycle-data/products/microsoft-system-center-data-protection-manager-2010.yml
+++ b/lifecycle-data/products/microsoft-system-center-data-protection-manager-2010.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft System Center Data Protection Manager 2010
-  description: Microsoft System Center Data Protection Manager 2010 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft System Center Data Protection Manager 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7534f6aceaf0d1bb13a70109e9df6b5dd07c1153
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812337"
 name: Microsoft System Center Data Protection Manager 2010
 summary: >+
-  Microsoft System Center Data Protection Manager 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft System Center Data Protection Manager 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 07/15/2010
   endDate: 10/13/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/system-center/dpm/upgrade-dpm?view=sc-dpm-2019)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/system-center/dpm/upgrade-dpm?view=sc-dpm-2019)"
