--- a/lifecycle-data/products/microsoft-system-center-virtual-machine-manager-2008.yml
+++ b/lifecycle-data/products/microsoft-system-center-virtual-machine-manager-2008.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft System Center Virtual Machine Manager 2008
-  description: Microsoft System Center Virtual Machine Manager 2008 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft System Center Virtual Machine Manager 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 20f4d174c142e762fd98385e6b0296fa13c41081
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812326"
 name: Microsoft System Center Virtual Machine Manager 2008
 summary: >
-  Microsoft System Center Virtual Machine Manager 2008 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft System Center Virtual Machine Manager 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - msc
 policyType: fixed
