--- a/lifecycle-data/products/microsoft-visual-j-version-20-redistributable-package.yml
+++ b/lifecycle-data/products/microsoft-visual-j-version-20-redistributable-package.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Visual J# Versie 2.0 Herdistribueerbaar pakket
-  description: Microsoft Visual J# Version 2.0 Herdistribueerbaar pakket volgt het beleid voor vaste levenscyclus.
+  title: Herdistribueerbaar pakket Microsoft Visual J# Version 2.0
+  description: Herdistribueerbaar pakket Microsoft Visual J# Version 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: fa32b69860aec252b7d1068ad2e130700f9d0b92
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811928"
-name: Microsoft Visual J# Versie 2.0 Herdistribueerbaar pakket
+name: Herdistribueerbaar pakket Microsoft Visual J# Version 2.0
 summary: >+
-  Microsoft Visual J# Version 2.0 Herdistribueerbaar pakket volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Herdistribueerbaar pakket Microsoft Visual J# Version 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 04/22/2006
   endDate: 07/12/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Ondersteuningsinformatie voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)\n\n> [!NOTE]\n> Ondersteuning voor dit product is beëindigd. Zie hieronder voor migratiebegeleiding."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsgegevens voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)\n\n> [!NOTE]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie."
