--- a/lifecycle-data/products/microsoft-windows-services-for-unix-35.yml
+++ b/lifecycle-data/products/microsoft-windows-services-for-unix-35.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Windows Services voor UNIX 3.5
-  description: Microsoft Windows Services voor UNIX 3.5 volgt het beleid voor de levenscyclus van componenten.
+  description: Microsoft Windows Services voor UNIX 3.5 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 55f7940da408533190f0d2c0fdb2d323e983a9e4
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811773"
 name: Microsoft Windows Services voor UNIX 3.5
-summary: "Microsoft Windows Services voor UNIX 3.5 volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)\n\n\n> [!IMPORTANT]\n> De ondersteuning is beëindigd. \n"
+summary: "Microsoft Windows Services voor UNIX 3.5 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).\n\n\n> [!IMPORTANT]\n> De ondersteuning is beëindigd. \n"
 products:
 - windows
 policyType: component
