--- a/lifecycle-data/products/outlook-2011-for-mac.yml
+++ b/lifecycle-data/products/outlook-2011-for-mac.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Outlook 2011 voor Mac
-  description: Outlook 2011 voor Mac volgt het beleid voor vaste levenscyclus.
+  description: Outlook 2011 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 61a62fb9ad78ceb10de85cd875d2435072b9c770
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851711"
 name: Outlook 2011 voor Mac
-summary: "Outlook 2011 voor Mac volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Outlook 2011 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - office
 policyType: fixed-mainstream-only
@@ -21,4 +21,4 @@ releases:
 - version: Original Release
   startDate: 12/09/2010
   endDate: 10/10/2017
-content: "\n\n> [!NOTE]\n> De algemene ondersteuning voor Microsoft Office voor Mac 2011 is uitgebreid, zoals getoond om alle klanten de standaard tijdlijn van de levenscyclusovergang te bieden"
+content: "\n\n> [!NOTE]\n> De basisondersteuning voor Microsoft Office voor Mac 2011 wordt uitgebreid zoals weergegeven om alle klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden."
