--- a/lifecycle-data/products/skype-for-business-2015.yml
+++ b/lifecycle-data/products/skype-for-business-2015.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Skype voor Bedrijven 2015
-  description: Skype voor Bedrijven 2015 volgt het beleid voor een vaste levenscyclus.
+  description: Skype voor Bedrijven 2015 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: bd853629ca9a63be5ed31cb94084c5b161cb82cc
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852041"
 name: Skype voor Bedrijven 2015
 summary: >+
-  Skype voor Bedrijven 2015 volgt het beleid voor een [vaste](/lifecycle/policies/fixed) levenscyclus.
+  Skype voor Bedrijven 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/11/2023
-content: "\n\n> [!NOTE]\n> Client: De skype voor bedrijven 2015-clientversie is een update voor de Lync 2013-client en volgt dezelfde levenscyclus van het product."
+content: "\n\n> [!NOTE]\n> Client: De release van de Skype voor Bedrijven 2015-client is een update van de Lync 2013-client en volgt dezelfde productlevenscyclus."
