--- a/lifecycle-data/products/softgrid-for-terminal-server-mdop.yml
+++ b/lifecycle-data/products/softgrid-for-terminal-server-mdop.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Softgrid voor Terminal Server (MDOP)
-  description: Softgrid for Terminal Server (MDOP) volgt het beleid voor vaste levenscyclus.
+  description: Softgrid voor Terminal Server (MDOP) volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 678dd6057802afee1e92f8bba4296ee1b620a97d
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811760"
 name: Softgrid voor Terminal Server (MDOP)
 summary: >+
-  Softgrid for Terminal Server (MDOP) volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Softgrid voor Terminal Server (MDOP) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 01/01/2007
   endDate: 01/12/2010
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over de levenscyclus - Algemeen](/lifecycle/faq/general-lifecycle)\n\n> [!NOTE]\n> Hiermee worden versies die eerder zijn niet ondersteund, uitgesloten. Ondersteuning voor dit product is onderworpen aan de voorwaarden van de overname."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Algemeen](/lifecycle/faq/general-lifecycle)\n\n> [!NOTE]\n> Uitgesloten versies waarvan de ondersteuning eerder werd stopgezet. Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf."
