--- a/lifecycle-data/products/system-center-reporting-manager-2006.yml
+++ b/lifecycle-data/products/system-center-reporting-manager-2006.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: System Center Reporting Manager 2006
-  description: System Center Reporting Manager 2006 volgt het beleid voor vaste levenscyclus.
+  description: System Center Reporting Manager 2006 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 472619ad5c47b8f0e8ff33bf769094c5edc6c58f
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812290"
 name: System Center Reporting Manager 2006
 summary: >
-  System Center Reporting Manager 2006 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  System Center Reporting Manager 2006 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - msc
 policyType: fixed
@@ -29,4 +29,4 @@ releases:
 - version: Original Release
   startDate: 09/17/2006
   endDate: 10/11/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://blogs.technet.microsoft.com/momteam/2016/10/06/microsoft-system-center-reporting-manager-2006-end-of-support)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/momteam/2016/10/06/microsoft-system-center-reporting-manager-2006-end-of-support)"
