--- a/lifecycle-data/products/user-experience-virtualization-uev-21.yml
+++ b/lifecycle-data/products/user-experience-virtualization-uev-21.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Virtualisatie van gebruikerservaring (UE-V) 2.1
-  description: User Experience Virtualization (UE-V) 2.1 volgt het beleid voor vaste levenscyclus.
+  title: User Experience Virtualization (UE-V) 2.1
+  description: User Experience Virtualization (UE-V) 2.1 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 728fb01eddd4b9436e2b907665d75a7cf1256887
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851740"
-name: Virtualisatie van gebruikerservaring (UE-V) 2.1
+name: User Experience Virtualization (UE-V) 2.1
 summary: >+
-  User Experience Virtualization (UE-V) 2.1 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  User Experience Virtualization (UE-V) 2.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 03/08/2015
   endDate: 10/11/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
