--- a/lifecycle-data/products/windows-10-on-surface-hub.yml
+++ b/lifecycle-data/products/windows-10-on-surface-hub.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows 10 op Surface Hub
-  description: Windows 10 op Surface Hub volgt het beleid voor vaste levenscyclus.
+  description: Windows 10 op Sufrace Hub volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d5c994b23c967ac3138bc695168ac1bbeec1856b
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851686"
 name: Windows 10 op Surface Hub
 summary: >+
-  Windows 10 op Surface Hub volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows 10 op Surface Hub volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 03/25/2016
   endDate: 10/14/2025
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows-updates (Surface Hub)](/surface-hub/manage-windows-updates-for-surface-hub)\n\n> [!NOTE]\n> Bekijk de pagina Windows-updates (Surface Hub) om er zeker van te zijn dat je de nieuwste Surface Hub-updates ontvangt."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows updates (Surface Hub)](/surface-hub/manage-windows-updates-for-surface-hub)\n\n> [!NOTE]\n> Raadpleeg de pagina Windows-updates (Surface Hub) om ervoor te zorgen dat u de nieuwste Surface Hub-updates ontvangt."
