--- a/lifecycle-data/products/windows-embedded-for-point-of-service.yml
+++ b/lifecycle-data/products/windows-embedded-for-point-of-service.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows ingesloten voor servicepunt
-  description: Windows Embedded for Point of Service volgt het beleid voor vaste levenscyclus.
+  title: Windows Embedded voor point-of-service
+  description: Windows Embedded voor point-of-service volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: fbfd3d13009c5b34a5ef92a78e76149f30ec707d
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812266"
-name: Windows ingesloten voor servicepunt
+name: Windows Embedded voor point-of-service
 summary: >
-  Windows Embedded for Point of Service volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Embedded voor point-of-service volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed
@@ -32,4 +32,4 @@ releases:
 - version: Original Release
   startDate: 06/06/2005
   endDate: 10/12/2010
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Ondersteuning voor Windows Embedded for Point of Service](https://support.microsoft.com/help/18581)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuning van Windows Embedded voor point-of-service](https://support.microsoft.com/help/18581)."
