--- a/lifecycle-data/products/windows-fundamentals-for-legacy-pcs.yml
+++ b/lifecycle-data/products/windows-fundamentals-for-legacy-pcs.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows-basisprincipes voor oudere pc's
-  description: Windows Fundamentals for Legacy-pc's volgt het beleid voor vaste levenscyclus.
+  title: Windows Fundamentals voor oudere pc's
+  description: Windows Fundamentals voor oudere pc's volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b0ea32a5421ba068c5fa75f46633c104fdb3eff5
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811740"
-name: Windows-basisprincipes voor oudere pc's
+name: Windows Fundamentals voor oudere pc's
 summary: >+
-  Windows Fundamentals for Legacy-pc's volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Fundamentals voor oudere pc's volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 05/31/2006
   endDate: 10/12/2010
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Dit product volgt hetzelfde beleid voor de levenscyclus van ondersteuning als Windows XP."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Dit product volgt hetzelfde levenscyclusbeleid voor ondersteuning als Windows XP."
