--- a/lifecycle-data/products/wunderlist.yml
+++ b/lifecycle-data/products/wunderlist.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Wunderlist Wunderlist
-  description: Wunderlist volgt het beleid voor vaste levenscyclus.
+  title: Wunderlist
+  description: Wunderlist volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: dd978a839e950577c0854ee914df4114d50a9865
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851725"
-name: Wunderlist Wunderlist
-summary: "Wunderlist volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van de overname. Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder. \n"
+name: Wunderlist
+summary: "Wunderlist volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf. De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
 - office
 policyType: fixed
@@ -22,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 06/02/2015
   endDate: 05/06/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://www.wunderlist.com/blog/join-us-on-our-new-journey)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://www.wunderlist.com/blog/join-us-on-our-new-journey)"
