--- a/lifecycle-data/products/dynamics-retail-management-system-headquarters-13.yml
+++ b/lifecycle-data/products/dynamics-retail-management-system-headquarters-13.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamics Retail Management System 1,3
-  description: Dynamics Retail Management System 1,3 volgt het vaste levenscyclus beleid.
+  title: Dynamics Retail Management System 1.3
+  description: Dynamics Retail Management System 1.3 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Headquarters,Store Operations
   ms.openlocfilehash: a3713fd375b666673f687b89fe23492b072c8c3b
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "931691"
-name: Dynamics Retail Management System 1,3
+name: Dynamics Retail Management System 1.3
 summary: >+
-  Dynamics Retail Management System 1,3 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Dynamics Retail Management System 1.3 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Hoofdkantoor, winkelactiviteiten
+  Dit geldt voor de volgende edities: Hoofdkantoor, Winkelactiviteiten
 
 products:
 - dynamics
