--- a/lifecycle-data/products/cloud-platform-system.yml
+++ b/lifecycle-data/products/cloud-platform-system.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Cloud platform System
-  description: Het beleid van de Cloud platform volgt het vaste levens Duurbeleid.
+  title: Cloud Platform System
+  description: Cloud Platform System volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 77f8b0e296d10279130459a1c0917c04382c26bc
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "932040"
-name: Cloud platform System
+name: Cloud Platform System
 summary: >+
-  Het beleid van de Cloud platform volgt het [vaste](/lifecycle/policies/fixed) levens duurbeleid.
+  Cloud Platform System volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/29/2015
   endDate: 07/12/2022
-content: "\n\n> [!NOTE]\n> Ondersteuning voor het Cloud platform System wordt uitgebreid, zoals weergegeven om alle klanten met de standaardlevenscyclus van de overgang te bieden.\n> [!NOTE]\n> Het Cloud platform System Standard is gestart op 18 september 2017.\n\n## <a name=\"editions\"></a>Edities \n* Standard"
+content: "\n\n> [!NOTE]\n> De ondersteuning voor Cloud Platform System wordt, zoals weergegeven, verlengd om alle klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.\n> [!NOTE]\n> Cloud Platform System Standard is gestart op 18 september 2017.\n\n## <a name=\"editions\"></a>Edities \n* Standard"
