--- a/lifecycle-data/products/dynamics-365-business-central-onpremises-fixed-policy.yml
+++ b/lifecycle-data/products/dynamics-365-business-central-onpremises-fixed-policy.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics 365 Business Central on-premises (Vast beleid)
-  description: Dynamics 365 Business Central on-premises (Vast beleid) volgt het beleid voor vaste levenscyclus.
+  description: Dynamics 365 Business Central on-premises (Vast beleid) volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: eec6e6713736926961ab8bdd81b36fcbdeaf3dec
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868700"
 name: Dynamics 365 Business Central on-premises (Vast beleid)
 summary: >+
-  Dynamics 365 Business Central on-premises (Vast beleid) volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics 365 Business Central on-premises (Vast beleid) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
