--- a/lifecycle-data/products/dynamics-365-commerce.yml
+++ b/lifecycle-data/products/dynamics-365-commerce.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics 365 Commerce
-  description: Dynamics 365 Commerce volgt het beleid voor moderne levenscyclus.
+  description: Dynamics 365 Commerce volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: caa3896b6ce5390654a79c694a018b6e5471d0ec
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868707"
 name: Dynamics 365 Commerce
 summary: >+
-  Dynamics 365 Commerce volgt het [beleid voor moderne](/lifecycle/policies/modern) levenscyclus.
+  Dynamics 365 Commerce volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 07/01/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Microsoft Dynamics 365-routekaart](https://roadmap.dynamics.com/)\n* [Voor meer informatie over de naamswijziging](https://dynamics.microsoft.com/retail-to-commerce/)\n\n> [!NOTE]\n> Dynamics 365 Retail is nu Dynamics 365 Commerce"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Microsoft Dynamics 365 Roadmap](https://roadmap.dynamics.com/)\n* [Voor meer informatie over de naamswijziging](https://dynamics.microsoft.com/retail-to-commerce/)\n\n> [!NOTE]\n> Dynamics 365 Retail is nu Dynamics 365 Commerce"
