--- a/lifecycle-data/products/excel-2010.yml
+++ b/lifecycle-data/products/excel-2010.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Excel 2010
-  description: Excel 2010 volgt het vaste levenscyclus beleid.
+  description: Excel 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Home and Student,Mobile,Standard
   ms.openlocfilehash: 1ba0a62a05a1e3fd9d8a0833957ca33f3ba8b4fb
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "931596"
 name: Excel 2010
 summary: >+
-  Excel 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Excel 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor Thuisgebruik en studenten, mobiel, standaard
+  Dit is van toepassing op de volgende edities: Thuisgebruik en Studenten, Mobile, Standard
 
 products:
 - office
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 07/15/2010
   endDate: 10/13/2020
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/DeployOffice/office-2010-end-support-roadmap)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Studenten\n* Mobiele\n* Standard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/DeployOffice/office-2010-end-support-roadmap)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Studenten\n* Mobile\n* Standard"
