--- a/lifecycle-data/products/exchange-server-2013.yml
+++ b/lifecycle-data/products/exchange-server-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Exchange Server 2013
-  description: Exchange Server 2013 volgt het vaste levenscyclus beleid.
+  description: Exchange Server 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Enterprise,Standard
   ms.openlocfilehash: 4362a67d623b5d2b1c99600a31880e0a584137a5
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "931300"
 name: Exchange Server 2013
 summary: >+
-  Exchange Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Exchange Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/14/2015
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor onderhoud](https://technet.microsoft.com/library/jj907309%28v)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsrichtlijnen](https://technet.microsoft.com/library/jj907309%28v)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
