--- a/lifecycle-data/products/exchange-server-2016.yml
+++ b/lifecycle-data/products/exchange-server-2016.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Exchange Server 2016
-  description: Exchange Server 2016 volgt het vaste levenscyclus beleid.
+  description: Exchange Server 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Enterprise,Standard
   ms.openlocfilehash: bad2d3a8e4e33ce78bd15a78145aceb308d0eefb
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "931152"
 name: Exchange Server 2016
 summary: >+
-  Exchange Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Exchange Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 10/01/2015
   endDate: 10/14/2025
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor onderhoud](/Exchange/new-features/updates?redirectedfrom)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsrichtlijnen](/Exchange/new-features/updates?redirectedfrom)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
