--- a/lifecycle-data/products/expression-4.yml
+++ b/lifecycle-data/products/expression-4.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Expressie 4
-  description: Expressie 4 volgt het vaste levenscyclus beleid.
+  title: Expression 4
+  description: Expression 4 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Design,Encoder,Studio Ultimate,Web
   ms.openlocfilehash: ad3463184e4da721215fe51169c93401d2d9c848
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "930856"
-name: Expressie 4
+name: Expression 4
 summary: >+
-  Expressie 4 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Expression 4 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: ontwerpen, encoder, Studio Ultimate, Web
+  Dit is van toepassing op de volgende edities: Design, Encoder, Studio Ultimate, Web
 
 products:
 - expression
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 08/26/2010
   endDate: 07/14/2020
-content: "\n\n> [!NOTE]\n> Het einde van de mainstream ondersteuning voor Expression Studio Ultimate 4 is 13 oktober 2015.\n\n## <a name=\"editions\"></a>Edities \n* Vooraf\n* Huffman\n* Studio Ultimate\n* Web"
+content: "\n\n> [!NOTE]\n> Het einde van de basisondersteuning voor Expression Studio Ultimate 4 is 13 oktober 2015.\n\n## <a name=\"editions\"></a>Edities \n* Design\n* Encoder\n* Studio Ultimate\n* Web"
