--- a/lifecycle-data/products/expression-blend-2.yml
+++ b/lifecycle-data/products/expression-blend-2.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Expressie 2
-  description: Expressie 2 volgt het vaste levenscyclus beleid.
+  title: Expression 2
+  description: Expression 2 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Blend,Design,Encoder,Studio,Web
   ms.openlocfilehash: 5186f4bbb53b110f625835b0250418a4594bf78b
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "930819"
-name: Expressie 2
-summary: "Expressie 2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit geldt voor de volgende edities: mengsel, ontwerp, encoder, Studio, Web\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+name: Expression 2
+summary: "Expression 2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Blend, Design, Encoder, Studio, Web\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - expression
 policyType: fixed
@@ -23,4 +23,4 @@ releases:
 - version: Original Release
   startDate: 07/24/2008
   endDate: 10/09/2018
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Blend\n* Vooraf\n* Huffman\n* Studio\n* Web"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Blend\n* Design\n* Encoder\n* Studio\n* Web"
