--- a/lifecycle-data/products/expression-web-3.yml
+++ b/lifecycle-data/products/expression-web-3.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Expressie 3
-  description: Expressie 3 volgt het beleid voor de vaststelling van de levenscyclus.
+  title: Expression 3
+  description: Expression 3 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Design,Encoder,Studio,Web
   ms.openlocfilehash: 406642d42292645f0a1f233b77937ba831d08671
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "930745"
-name: Expressie 3
+name: Expression 3
 summary: >+
-  Expressie 3 volgt het beleid voor de [vaststelling](/lifecycle/policies/fixed) van de levenscyclus.
+  Expression 3 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: ontwerpen, encoder, Studio, Web
+  Dit is van toepassing op de volgende edities: Design, Encoder, Studio, Web
 
 products:
 - expression
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 10/19/2009
   endDate: 01/14/2020
-content: "\n\n> [!NOTE]\n> De begindatum van expressie ontwerp 3 is 19 november 2009. \n\n## <a name=\"editions\"></a>Edities \n* Vooraf\n* Huffman\n* Studio\n* Web"
+content: "\n\n> [!NOTE]\n> De startdatum voor Expression Design 3 is 19 november 2009. \n\n## <a name=\"editions\"></a>Edities \n* Design\n* Encoder\n* Studio\n* Web"
