--- a/lifecycle-data/products/hyperv-server-2019.yml
+++ b/lifecycle-data/products/hyperv-server-2019.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Hyper-V-server 2019
-  description: Hyper-V Server 2019 volgt het beleid voor vaste levenscyclus.
+  title: Hyper-V Server 2019
+  description: Hyper-V Server 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 6ba8930e824f29ea98cb30ad9291ac18b0834221
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868671"
-name: Hyper-V-server 2019
+name: Hyper-V Server 2019
 summary: >+
-  Hyper-V Server 2019 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Hyper-V Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 11/13/2018
   endDate: 01/09/2029
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows Server-community](https://techcommunity.microsoft.com/t5/windows-server/ct-p/Windows-Server)\n\n> [!NOTE]\n> Windows Server 2019 en Windows Server, versie 1809 zijn opnieuw uitgebracht op 13 november 2018. De ondersteuningsdata zijn dienovereenkomstig aangepast."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server Community](https://techcommunity.microsoft.com/t5/windows-server/ct-p/Windows-Server)\n\n> [!NOTE]\n> Windows Server 2019 en Windows Server, versie 1809 zijn opnieuw uitgebracht op 13 november 2018. De ondersteuningsdatums zijn op basis hiervan aangepast."
