--- a/lifecycle-data/products/microsoft-host-integration-server-2016.yml
+++ b/lifecycle-data/products/microsoft-host-integration-server-2016.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Host Integration Server 2016
-  description: Microsoft Host Integration Server 2016 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Host Integration Server 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: a3ee70f1721ef994d1bbba7618623db190d82651
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868669"
 name: Microsoft Host Integration Server 2016
 summary: >+
-  Microsoft Host Integration Server 2016 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Host Integration Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 12/31/2016
   endDate: 01/11/2027
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](https://techcommunity.microsoft.com/t5/host-integration-blog/bg-p/HostIntegrationBlog)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](https://techcommunity.microsoft.com/t5/host-integration-blog/bg-p/HostIntegrationBlog)"
