--- a/lifecycle-data/products/office-live-meeting.yml
+++ b/lifecycle-data/products/office-live-meeting.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Office Live Meeting
-  description: Office Live Meeting volgt het moderne levenscyclus beleid.
+  description: Office Live Meeting volgt het moderne levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: f5d328b887173c82655f707e9d931266c2d7b857
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "928895"
 name: Office Live Meeting
-summary: "Office Live Meeting volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.\n\nDit is van toepassing op de volgende edities: Standard\n\n> [!IMPORTANT]\n> Ondersteuning voor deze service is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
+summary: "Office Live Meeting volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor deze service is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
 - office
 policyType: modern-online
