--- a/lifecycle-data/products/outlook-2010.yml
+++ b/lifecycle-data/products/outlook-2010.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Outlook 2010
-  description: Outlook 2010 volgt het vaste levenscyclus beleid.
+  description: Outlook 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard,with Business Contact Manager
   ms.openlocfilehash: ce67d67737e2a942507d26d8d1bd308697a58144
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "928821"
 name: Outlook 2010
 summary: >+
-  Outlook 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Outlook 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: standaard voor Business Contact Manager
+  Dit geldt voor de volgende edities: Standaard, met Business Contact Manager
 
 products:
 - office
