--- a/lifecycle-data/products/project-2010.yml
+++ b/lifecycle-data/products/project-2010.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project 2010
-  description: Project 2010 volgt het vaste levenscyclus beleid.
+  description: Project 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional,Standard
   ms.openlocfilehash: bdfc3db9732d902f753335f6457b960248667476
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926564"
 name: Project 2010
 summary: >+
-  Project 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Project 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Professional, Standard
