--- a/lifecycle-data/products/windows-analytics.yml
+++ b/lifecycle-data/products/windows-analytics.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Analytics
-  description: Windows Analytics volgt het moderne levenscyclus beleid.
+  description: Windows Analytics volgt het moderne levenscyclusbeleid.
   ms.date: 08/11/2020
   ms.openlocfilehash: 01c42583edc132faefab6ccf17e3f25cd6e2ce9b
   ms.sourcegitcommit: d4ec29fd0c57053cfa2254d1bb08c610bb5e6817
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/11/2020
   ms.locfileid: "887850"
 name: Windows Analytics
 summary: >
-  Windows Analytics volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
+  Windows Analytics volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning is beëindigd. Zie migratie-instructies hieronder.
+  > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - windows
 policyType: modern-on-prem
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 03/02/2017
   endDate: 01/31/2020
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Desktop-Analytics-Blog/Migrate-user-input-data-from-Windows-Analytics-Upgrade-Readiness/ba-p/841744#M15)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Desktop-Analytics-Blog/Migrate-user-input-data-from-Windows-Analytics-Upgrade-Readiness/ba-p/841744#M15)"
