commit translated contents

--- a/lifecycle-data/products/biztalk-server-2016.yml
+++ b/lifecycle-data/products/biztalk-server-2016.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: BizTalk Server 2016
-  description: BizTalk Server 2016 volgt het vaste levenscyclus beleid.
+  description: BizTalk Server 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Branch,Developer,Enterprise,Standard
   ms.openlocfilehash: 1442cb807ade39555954dc0f2fba82434027cb2c
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "932151"
 name: BizTalk Server 2016
 summary: >+
-  BizTalk Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  BizTalk Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Branch, Developer, Enterprise, Standard
