--- a/lifecycle-data/products/microsoft-connected-services-framework-25.yml
+++ b/lifecycle-data/products/microsoft-connected-services-framework-25.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Connected Services Framework 2,5
-  description: Microsoft Connected Services Framework 2,5 volgt het vaste levenscyclus beleid.
+  title: Microsoft Connected Services Framework 2.5
+  description: Microsoft Connected Services Framework 2.5 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Order Handling Standard Business Event 2.5,Server,Service Provider
   ms.openlocfilehash: e0cdc315d310b2a6ed3c705261592af5be8ca851
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "934112"
-name: Microsoft Connected Services Framework 2,5
+name: Microsoft Connected Services Framework 2.5
 summary: >+
-  Microsoft Connected Services Framework 2,5 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Connected Services Framework 2.5 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: order verwerking, Standard Business gebeurtenis 2,5, Server, service provider
+  Dit is van toepassing op de volgende edities: Order Handling Standard Business Event 2.5, Server, Service Provider
 
 products:
 - connected-services-framework
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 07/26/2005
   endDate: 10/13/2015
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Best preport handling Standard Business gebeurtenis 2,5\n* Server\n* Service provider"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Order Handling Standard Business Event 2.5\n* Server\n* Serviceprovider"
