--- a/lifecycle-data/products/expression.yml
+++ b/lifecycle-data/products/expression.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Mening
-  description: Expressie volgt het vaste levenscyclus beleid.
+  title: Expression
+  description: Expression volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Blend,Design,Encoder,Studio
   ms.openlocfilehash: 2d2e5c18c1e8ca1b355bfe392df42d6a351e6585
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "936221"
-name: Mening
-summary: "Expressie volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit geldt voor de volgende edities: mengsel, ontwerp, encoder, Studio\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+name: Expression
+summary: "Expression volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Blend, Design, Encoder, Studio\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - expression
 policyType: fixed
@@ -23,4 +23,4 @@ releases:
 - version: Original Release
   startDate: 07/27/2007
   endDate: 10/10/2017
-content: "\n\n> [!NOTE]\n> De begindatum voor de overvloeiing van expressies is 13 juli 2007. \n\n## <a name=\"editions\"></a>Edities \n* Blend\n* Vooraf\n* Huffman\n* Studio"
+content: "\n\n> [!NOTE]\n> De begindatum voor Expression Blend is 13 juli 2007. \n\n## <a name=\"editions\"></a>Edities \n* Blend\n* Design\n* Encoder\n* Studio"
