--- a/lifecycle-data/products/infopath-2010.yml
+++ b/lifecycle-data/products/infopath-2010.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: InfoPath 2010
-  description: InfoPath 2010 volgt het vaste levenscyclus beleid.
+  description: InfoPath 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: b70d3170dfa8f1a3c2c08ae73564470d3d956b90
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "936073"
 name: InfoPath 2010
 summary: >+
-  InfoPath 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  InfoPath 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
