--- a/lifecycle-data/products/microsoft-365.yml
+++ b/lifecycle-data/products/microsoft-365.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft 365
-  description: Microsoft 365 volgt het moderne levenscyclus beleid.
+  description: Microsoft 365 volgt het moderne levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Business,Education,Enterprise,Government
   ms.openlocfilehash: 49d1c65ad462a3ce987df621004cf7341ac4aa23
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "935962"
 name: Microsoft 365
 summary: >+
-  Microsoft 365 volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
+  Microsoft 365 volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Business, education, Enterprise, Government
+  Dit geldt voor de volgende edities: Business, Education, Enterprise, Government
 
 products:
 - office
@@ -25,4 +25,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 09/22/2015
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Microsoft 365-wegwijzer](https://www.microsoft.com/microsoft-365/roadmap)\n* [Systeemvereisten](https://www.microsoft.com/microsoft-365/microsoft-365-and-office-resources)\n\n\n## <a name=\"editions\"></a>Edities \n* Business\n* Education\n* Enterprise\n* Overheid"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Microsoft 365 Roadmap](https://www.microsoft.com/microsoft-365/roadmap)\n* [Systeemvereisten](https://www.microsoft.com/microsoft-365/microsoft-365-and-office-resources)\n\n\n## <a name=\"editions\"></a>Edities \n* Business\n* Education\n* Enterprise\n* Government"
