--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-financial-services-10.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-financial-services-10.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BizTalk Accelerator voor financiële services 1,0
-  description: Microsoft BizTalk Accelerator for Financial Services 1,0 volgt het vaste levenscyclus beleid.
+  title: Microsoft BizTalk Accelerator voor Financial Services 1.0
+  description: Microsoft BizTalk Accelerator voor Financial Services 1.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Enterprise,Standard
   ms.openlocfilehash: 4e6c4d0bd0d99808dff1c4cd2cf01f6c0ba6adf6
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "935333"
-name: Microsoft BizTalk Accelerator voor financiële services 1,0
+name: Microsoft BizTalk Accelerator voor Financial Services 1.0
 summary: >+
-  Microsoft BizTalk Accelerator for Financial Services 1,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft BizTalk Accelerator voor Financial Services 1.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
