--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-rosettanet-30.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-rosettanet-30.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BizTalk Accelerator voor RosettaNet 3,0
-  description: Microsoft BizTalk Accelerator voor RosettaNet 3,0 volgt het vaste levenscyclus beleid.
+  title: Microsoft BizTalk Accelerator voor RosettaNet 3.0
+  description: Microsoft BizTalk Accelerator voor RosettaNet 3.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Enterprise,Standard
   ms.openlocfilehash: 1a27e01c802b94c72dbcab51e79d200fb0877182
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "934815"
-name: Microsoft BizTalk Accelerator voor RosettaNet 3,0
+name: Microsoft BizTalk Accelerator voor RosettaNet 3.0
 summary: >+
-  Microsoft BizTalk Accelerator voor RosettaNet 3,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft BizTalk Accelerator voor RosettaNet 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
