--- a/lifecycle-data/products/microsoft-business-solutionsgreat-plains-80.yml
+++ b/lifecycle-data/products/microsoft-business-solutionsgreat-plains-80.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Business Solutions--Great Plains 8,0
-  description: Microsoft Business Solutions--Great Plains 8,0 volgt het vaste levenscyclus beleid.
+  title: Microsoft Business Solutions - Great Plains 8.0
+  description: Microsoft Business Solutions--Great Plains 8.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 536666c99ff11026e44547243dc841425050faaa
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "934667"
-name: Microsoft Business Solutions--Great Plains 8,0
+name: Microsoft Business Solutions - Great Plains 8.0
 summary: >
-  Microsoft Business Solutions--Great Plains 8,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Business Solutions - Great Plains 8.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
@@ -20,7 +20,7 @@ summary: >
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd op 13 oktober 2009
+  > De ondersteuning voor dit product is beëindigd op 13 oktober 2009
 products:
 - dynamics
 policyType: fixed-mainstream-only
