--- a/lifecycle-data/products/microsoft-enterprise-desktop-virtualization-20.yml
+++ b/lifecycle-data/products/microsoft-enterprise-desktop-virtualization-20.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Enterprise Desktop Virtualization 2,0
-  description: Microsoft Enterprise Desktop Virtualization 2,0 gevolgd door het beleid voor de vaststelling van de levenscyclus.
+  title: Microsoft Enterprise Desktop Virtualization 2.0
+  description: Microsoft Enterprise Desktop Virtualization 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Enterprise
   ms.openlocfilehash: c389a7a61ffd7a171c58b70f1050657e82d736be
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "933890"
-name: Microsoft Enterprise Desktop Virtualization 2,0
+name: Microsoft Enterprise Desktop Virtualization 2.0
 summary: >+
-  Microsoft Enterprise Desktop Virtualization 2,0 gevolgd door het beleid voor de [vaststelling](/lifecycle/policies/fixed) van de levenscyclus.
+  Microsoft Enterprise Desktop Virtualization 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Enterprise
