--- a/lifecycle-data/products/microsoft-lync-2013.yml
+++ b/lifecycle-data/products/microsoft-lync-2013.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Lync 2013
-  description: Lync 2013 volgt het vaste levenscyclus beleid.
+  description: Lync 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: SDK,Standard
   ms.openlocfilehash: a5523cba92283c421c42d23d9753864a0408bf01
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "933335"
 name: Lync 2013
 summary: >+
-  Lync 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Lync 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: SDK, Standard
+  Dit is van toepassing op de volgende edities: SDK, Standard
 
 products:
 - office
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/11/2023
-content: "\n\n> [!NOTE]\n> De release van de client van Skype voor bedrijven 2015 is een update van de Lync 2013-client en volgt dezelfde productlevenscyclus.\nDe begindatum van Lync 2013 SDK is 23 februari 2013. \n\n## <a name=\"editions\"></a>Edities \n* SDK\n* Standard"
+content: "\n\n> [!NOTE]\n> De release van de Skype voor Bedrijven 2015-client is een update van de Lync 2013-client en volgt dezelfde productlevenscyclus.\nDe startdatum voor Lync 2013 SDK is 23 februari 2013. \n\n## <a name=\"editions\"></a>Edities \n* SDK\n* Standard"
