--- a/lifecycle-data/products/microsoft-office-2004-for-mac.yml
+++ b/lifecycle-data/products/microsoft-office-2004-for-mac.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2004 voor Mac
-  description: Microsoft Office 2004 voor Mac volgt het beleid voor de vaste levenscyclus.
+  description: Microsoft Office 2004 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional,Standard,Student and Teacher
   ms.openlocfilehash: 12b63fa73b4b6a4bfc393cc62234147382a6d46a
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "936831"
 name: Microsoft Office 2004 voor Mac
 summary: >+
-  Microsoft Office 2004 voor Mac volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office 2004 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Professional, Standard, leerling en docent
+  Dit is van toepassing op de volgende edities: Professional, Standard, Student en Docent
 
 products:
 - office
