--- a/lifecycle-data/products/microsoft-office-2016-for-mac.yml
+++ b/lifecycle-data/products/microsoft-office-2016-for-mac.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2016 voor Mac
-  description: Microsoft Office 2016 voor Mac volgt het beleid voor de vaste levenscyclus.
+  description: Microsoft Office 2016 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Home and Business,Home and Student,Standard
   ms.openlocfilehash: b92cf0db708d566826b8d260ef9026bc308c41ce
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "936295"
 name: Microsoft Office 2016 voor Mac
 summary: >+
-  Microsoft Office 2016 voor Mac volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office 2016 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor Thuisgebruik en zelfstandigen, voor Thuisgebruik en studenten, Standard
+  Dit is van toepassing op de volgende edities: Thuisgebruik en Zelfstandigen, Thuisgebruik en Studenten, Standard
 
 products:
 - office
