--- a/lifecycle-data/products/microsoft-office-communicator-2005.yml
+++ b/lifecycle-data/products/microsoft-office-communicator-2005.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Communicator 2005
-  description: Microsoft Office Communicator 2005 volgt het vaste levenscyclus beleid.
+  description: Microsoft Office Communicator 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 63747b4e26cc52df003704a5cda3a3bcd637a8c1
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "936258"
 name: Microsoft Office Communicator 2005
-summary: "Microsoft Office Communicator 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit is van toepassing op de volgende edities: Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+summary: "Microsoft Office Communicator 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit geldt voor de volgende edities: Standaard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - office
 policyType: fixed
