--- a/lifecycle-data/products/powershell.yml
+++ b/lifecycle-data/products/powershell.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: PowerShell
-  description: PowerShell volgt het moderne levenscyclus beleid.
+  description: PowerShell volgt het moderne levenscyclusbeleid.
   ms.date: 09/02/2020
   keywords: ''
   ms.openlocfilehash: 5819d863d735920cdb08f70b8280348c152ca27c
   ms.sourcegitcommit: 33a446990607d1c24303bd86e45d4e4de34e56a5
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/02/2020
   ms.locfileid: "945213"
 name: PowerShell
 summary: >+
-  PowerShell volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
+  PowerShell volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -34,4 +34,4 @@ releases:
 - version: PowerShell 6.x
   startDate: 01/19/2018
   endDate: 09/04/2020
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://aka.ms/pslifecycle)\n\n> [!NOTE]\n> Zie de gedetailleerde informatie over de levenscyclus van PowerShell op de koppeling naar informatie over de Servicing."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://aka.ms/pslifecycle)\n\n> [!NOTE]\n> Raadpleeg de gedetailleerde levenscyclusinformatie voor PowerShell via de koppeling voor onderhoudsinformatie."
