--- a/lifecycle-data/products/sharepoint-server-2013.yml
+++ b/lifecycle-data/products/sharepoint-server-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: SharePoint Server 2013
-  description: SharePoint Server 2013 volgt het vaste levenscyclus beleid.
+  description: SharePoint Server 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/02/2020
   keywords: ''
   ms.openlocfilehash: ccd15eb6ef3e1766b31cadaa08b558c6071fddf9
   ms.sourcegitcommit: 37b80a1b6fcda4dc6147d99a362a75b884d08a51
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/02/2020
   ms.locfileid: "941591"
 name: SharePoint Server 2013
 summary: >+
-  SharePoint Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  SharePoint Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -29,4 +29,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/14/2015
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Onderhoudsinformatie](/SharePoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-2013)\n\n> [!NOTE]\n> Zie documentatie voor [product](https://docs.microsoft.com/sharepoint/sharepoint-server) en [ontwikkelaars](https://developer.microsoft.com/sharepoint/docs) ."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Onderhoudsinformatie](/SharePoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-2013)\n\n> [!NOTE]\n> Raadpleeg [product-](https://docs.microsoft.com/sharepoint/sharepoint-server) en [ontwikkelaars](https://developer.microsoft.com/sharepoint/docs)documentatie."
