--- a/lifecycle-data/products/sql-server-2019.yml
+++ b/lifecycle-data/products/sql-server-2019.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: SQL Server 2019
-  description: SQL Server 2019 volgt het vaste levenscyclus beleid.
+  description: SQL Server 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: on Linux (all editions),on Windows (all editions)
   ms.openlocfilehash: e80b4d51844a591f9c912932761d121d9c0d6d37
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937960"
 name: SQL Server 2019
 summary: >+
-  SQL Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  SQL Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: op Linux (alle edities), onder Windows (alle edities)
+  Dit geldt voor de volgende edities: op Linux (alle edities), op Windows (alle edities)
 
 products:
 - sql-server
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 11/04/2019
   endDate: 01/08/2030
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://blogs.msdn.microsoft.com/sqlreleaseservices/announcing-the-modern-servicing-model-for-sql-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* voor Linux (alle edities)\n* in Windows (alle edities)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://blogs.msdn.microsoft.com/sqlreleaseservices/announcing-the-modern-servicing-model-for-sql-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* op Linux (alle edities)\n* op Windows (alle edities)"
