--- a/lifecycle-data/products/virtual-server-2005-r2.yml
+++ b/lifecycle-data/products/virtual-server-2005-r2.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Virtuele Server 2005 R2
-  description: Virtuele Server 2005 R2 volgt het vaste levenscyclus beleid.
+  title: Virtual Server 2005 R2
+  description: Virtual Server 2005 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Enterprise,Standard
   ms.openlocfilehash: 0d4c323a758219f240fc6efbc4ebcfc99e470241
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937923"
-name: Virtuele Server 2005 R2
-summary: "Virtuele Server 2005 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit is van toepassing op de volgende edities: Enterprise, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+name: Virtual Server 2005 R2
+summary: "Virtual Server 2005 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Enterprise, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - windows
 policyType: fixed
