--- a/lifecycle-data/products/visio-2013.yml
+++ b/lifecycle-data/products/visio-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visio 2013
-  description: Visio 2013 volgt het vaste levenscyclus beleid.
+  description: Visio 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional,Standard
   ms.openlocfilehash: 74796338b0a119f91226a8f57f6982000aa845e6
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937812"
 name: Visio 2013
 summary: >+
-  Visio 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Visio 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Professional, Standard
