--- a/lifecycle-data/products/visual-studio-team-foundation-server-2012.yml
+++ b/lifecycle-data/products/visual-studio-team-foundation-server-2012.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio Team Foundation Server 2012
-  description: Visual Studio Team Foundation Server 2012 volgt het vaste levenscyclus beleid.
+  description: Visual Studio Team Foundation Server 2012 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: All
   ms.openlocfilehash: 010d56498bce5718034fa1af505e985ed93f40ce
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937331"
 name: Visual Studio Team Foundation Server 2012
 summary: >+
-  Visual Studio Team Foundation Server 2012 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Visual Studio Team Foundation Server 2012 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Alles
