--- a/lifecycle-data/products/windows-embedded-device-manager-2011.yml
+++ b/lifecycle-data/products/windows-embedded-device-manager-2011.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Embedded Device Manager 2011
-  description: Windows Embedded Device Manager 2011 volgt het vaste levenscyclus beleid.
+  description: Windows Embedded Device Manager 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Client,SDK,Server
   ms.openlocfilehash: 8d46a10b12894b95bfb25872c893b3148aa7a550
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "939921"
 name: Windows Embedded Device Manager 2011
 summary: >
-  Windows Embedded Device Manager 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Windows Embedded Device Manager 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit geldt voor de volgende edities: Client, SDK, Server
