--- a/lifecycle-data/products/windows-mobile-50.yml
+++ b/lifecycle-data/products/windows-mobile-50.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows Mobile 5,0
-  description: Windows Mobile 5,0 volgt het vaste levenscyclus beleid.
+  title: Windows Mobile 5.0
+  description: Windows Mobile 5.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: for Pocket PC,for Smartphones
   ms.openlocfilehash: 7a07c670b79f79c4c1e9406cff7b89db9eaab660
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "939847"
-name: Windows Mobile 5,0
+name: Windows Mobile 5.0
 summary: >
-  Windows Mobile 5,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Windows Mobile 5.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor Pocket PC, voor smartphones
+  Dit geldt voor de volgende edities: voor Pocket PC, voor Smartphones
 
 
   > [!IMPORTANT]
