--- a/lifecycle-data/products/windows-mobile-6.yml
+++ b/lifecycle-data/products/windows-mobile-6.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Mobile 6
-  description: Windows Mobile 6 volgt het vaste levenscyclus beleid.
+  description: Windows Mobile 6 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Classic,Professional,Standard
   ms.openlocfilehash: 4ee2f6aae75005bfe086bd727a070f43fbae546c
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "939773"
 name: Windows Mobile 6
 summary: >
-  Windows Mobile 6 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Windows Mobile 6 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: klassiek, professioneel, standaard
+  Dit is van toepassing op de volgende edities: Professional, Standard
 
 
   > [!IMPORTANT]
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 05/12/2007
   endDate: 01/08/2013
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Klassiek\n* Professional\n* Standard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Classic\n* Professional\n* Standard"
