--- a/lifecycle-data/products/windows-mobile-61.yml
+++ b/lifecycle-data/products/windows-mobile-61.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows Mobile 6,1
-  description: Windows Mobile 6,1 volgt het vaste levenscyclus beleid.
+  title: Windows Mobile 6.1
+  description: Windows Mobile 6.1 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Adaptation Kit,Professional,Standard
   ms.openlocfilehash: 97c434aaac90a1923508ffe5b1d18e735bfa4101
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "939810"
-name: Windows Mobile 6,1
+name: Windows Mobile 6.1
 summary: >
-  Windows Mobile 6,1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Windows Mobile 6.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: aanpassings pakket, Professional, Standard
+  Dit is van toepassing op de volgende edities: Adaption Kit, Professional, Standard
 
 
   > [!IMPORTANT]
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 07/01/2008
   endDate: 01/08/2013
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Aanpassings pakket\n* Professional\n* Standard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Adaptation Kit\n* Professional\n* Standard"
