--- a/lifecycle-data/products/windows-storage-server-2003-r2.yml
+++ b/lifecycle-data/products/windows-storage-server-2003-r2.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Storage Server 2003 R2
-  description: Windows Storage Server 2003 R2 volgt het vaste levenscyclus beleid.
+  description: Windows Storage Server 2003 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 0bbf6a9de795da54ad932124e857b89fa09d55e2
   ms.sourcegitcommit: 37ac01a1d5492bb2bf54cbd018ea34074db8c998
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "940814"
 name: Windows Storage Server 2003 R2
-summary: "Windows Storage Server 2003 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit is van toepassing op de volgende edities: Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd.\nDit product verzendt u met Windows Server 2003 Service Pack 1. \n"
+summary: "Windows Storage Server 2003 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit geldt voor de volgende edities: Standaard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd.\nDit product wordt geleverd met Windows Server 2003 Service Pack 1. \n"
 products:
 - windows
 policyType: fixed
