--- a/lifecycle-data/products/windows-storage-server-2016.yml
+++ b/lifecycle-data/products/windows-storage-server-2016.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Storage Server 2016
-  description: Windows Storage Server 2016 volgt het vaste levenscyclus beleid.
+  description: Windows Storage Server 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard,Workgroup
   ms.openlocfilehash: 3c0a7d1d5f6f5a73282c35ad96c1b0a036f938d1
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "938959"
 name: Windows Storage Server 2016
 summary: >+
-  Windows Storage Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Windows Storage Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Standaard, Workgroup
+  Dit geldt voor de volgende edities: Standaard, Werkgroep
 
 products:
 - windows
