--- a/lifecycle-data/products/learning-essentials-20-for-microsoft-office.yml
+++ b/lifecycle-data/products/learning-essentials-20-for-microsoft-office.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Essentials 2.0 leren voor Microsoft Office
-  description: Learning Essentials 2.0 voor Microsoft Office volgt het beleid voor de levenscyclus van componenten.
+  title: Learning Essentials 2.0 voor Microsoft Office
+  description: Learning Essentials 2.0 voor Microsoft Office volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1bdfd924e319c432bbaf5d2b75f5945ca6408915
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812475"
-name: Essentials 2.0 leren voor Microsoft Office
+name: Learning Essentials 2.0 voor Microsoft Office
 summary: >+
-  Learning Essentials 2.0 voor Microsoft Office volgt het beleid voor de levenscyclus [van componenten.](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy)
+  Learning Essentials 2.0 voor Microsoft Office volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
