--- a/lifecycle-data/products/microsoft-business-solutionssolomon-60.yml
+++ b/lifecycle-data/products/microsoft-business-solutionssolomon-60.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Business Solutions -- Solomon 6.0
-  description: Microsoft Business Solutions -- Solomon 6.0 volgt het beleid voor vaste levenscyclus.
+  title: Microsoft Business Solutions - Solomon 6.0
+  description: Microsoft Business Solutions - Solomon 6.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 540bb6a54428f0ebae78d2599649a27a4504fea6
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812429"
-name: Microsoft Business Solutions -- Solomon 6.0
+name: Microsoft Business Solutions - Solomon 6.0
 summary: >+
-  Microsoft Business Solutions -- Solomon 6.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Business Solutions - Solomon 6.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
