--- a/lifecycle-data/products/duet-for-microsoft-office-and-sap.yml
+++ b/lifecycle-data/products/duet-for-microsoft-office-and-sap.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Duet voor Microsoft Office en SAP
-  description: Duet voor Microsoft Office en SAP volgt het beleid voor vaste levenscyclus.
+  title: Duet for Microsoft Office and SAP
+  description: Duet for Microsoft Office and SAP volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7eb8ccf553c6adb14f39a87a103274110b34c656
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812657"
-name: Duet voor Microsoft Office en SAP
+name: Duet for Microsoft Office and SAP
 summary: >+
-  Duet voor Microsoft Office en SAP volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Duet for Microsoft Office and SAP volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 10/28/2006
   endDate: 01/10/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Sap](https://support.sap.com/index.html)\n\n> [!NOTE]\n> Dit product wordt verkocht en ondersteund door SAP."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [SAP](https://support.sap.com/index.html)\n\n> [!NOTE]\n> Dit product wordt verkocht en ondersteund door SAP."
