--- a/lifecycle-data/products/dynamics-crm-12.yml
+++ b/lifecycle-data/products/dynamics-crm-12.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics CRM 1.2
-  description: Dynamics CRM 1.2 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics CRM 1.2 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 6b796f6d5794f461409c95641410a4e47f71cf3a
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812533"
 name: Dynamics CRM 1.2
 summary: >+
-  Dynamics CRM 1.2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics CRM 1.2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
