--- a/lifecycle-data/products/dynamics-crm-40.yml
+++ b/lifecycle-data/products/dynamics-crm-40.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics CRM 4.0
-  description: Dynamics CRM 4.0 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics CRM 4.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 852d493a2b4693fdc4b3b7cc1e40b30afe880704
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812529"
 name: Dynamics CRM 4.0
 summary: >+
-  Dynamics CRM 4.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics CRM 4.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 02/29/2008
   endDate: 04/10/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://cloudblogs.microsoft.com/dynamics365/)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://cloudblogs.microsoft.com/dynamics365/)"
