--- a/lifecycle-data/products/dynamics-entrepreneur-solution-2008.yml
+++ b/lifecycle-data/products/dynamics-entrepreneur-solution-2008.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics Entrepreneur Solution 2008
-  description: Dynamics Entrepreneur Solution 2008 volgt het Vaste Levenscyclusbeleid.
+  description: Dynamics Entrepreneur Solution 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 2c1a6cec1d8bc3401b1c0dc8d156c03795e68b05
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812526"
 name: Dynamics Entrepreneur Solution 2008
 summary: >+
-  Dynamics Entrepreneur Solution 2008 volgt het [Vaste](/lifecycle/policies/fixed) Levenscyclusbeleid.
+  Dynamics Entrepreneur Solution 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
