--- a/lifecycle-data/products/dynamics-nav-50.yml
+++ b/lifecycle-data/products/dynamics-nav-50.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamiek NAV 5.0
-  description: Dynamics NAV 5.0 volgt het beleid voor vaste levenscyclus.
+  title: Dynamics NAV 5.0
+  description: Dynamics NAV 5.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 69fc6833ac2d541af169fb84b1fd781e54c3d177
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812087"
-name: Dynamiek NAV 5.0
+name: Dynamics NAV 5.0
 summary: >+
-  Dynamics NAV 5.0 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics NAV 5.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 04/01/2007
   endDate: 04/13/2010
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
