--- a/lifecycle-data/products/excel-2004-for-mac.yml
+++ b/lifecycle-data/products/excel-2004-for-mac.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Excel 2004 voor Mac
-  description: Microsoft Excel 2004 voor Mac volgt het beleid voor een vaste levenscyclus.
+  description: Microsoft Excel 2004 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 51b0adf9f1c97f1ab2032784a18f4d0fbd9912c0
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812072"
 name: Microsoft Excel 2004 voor Mac
-summary: "Microsoft Excel 2004 voor Mac volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Microsoft Excel 2004 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - office
 policyType: fixed-mainstream-only
