--- a/lifecycle-data/products/excel-2008-for-mac.yml
+++ b/lifecycle-data/products/excel-2008-for-mac.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Excel 2008 voor Mac
-  description: Excel 2008 voor Mac volgt het beleid voor vaste levenscyclus.
+  description: Excel 2008 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: aec33c5351d53108f34d6d36a6db1ba5d1a4b5c4
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812514"
 name: Excel 2008 voor Mac
 summary: >
-  Excel 2008 voor Mac volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Excel 2008 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - office
 policyType: fixed-mainstream-only
