--- a/lifecycle-data/products/microsoft-business-solutions-for-analytics-forecaster-67.yml
+++ b/lifecycle-data/products/microsoft-business-solutions-for-analytics-forecaster-67.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Business Solutions for Analytics Forecaster 6.7
-  description: Microsoft Business Solutions for Analytics Forecaster 6.7 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Business Solutions for Analytics Forecaster 6.7 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 36be353ad94fe53b83be08cae60d98902f0e7c92
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812435"
 name: Microsoft Business Solutions for Analytics Forecaster 6.7
 summary: >+
-  Microsoft Business Solutions for Analytics Forecaster 6.7 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Business Solutions for Analytics Forecaster 6.7 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
