--- a/lifecycle-data/products/microsoft-diagnostics-and-recovery-toolset-65.yml
+++ b/lifecycle-data/products/microsoft-diagnostics-and-recovery-toolset-65.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Diagnostics and Recovery Toolset 6.5
-  description: Microsoft Diagnostics and Recovery Toolset 6.5 volgt het beleid voor vaste levenscyclus.
+  title: Microsoft Diagnostics en Recovery Toolset 6.5
+  description: Diagnose- en herstelhulpmiddelenset van Microsoft 6.5 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1e9cfdf6271094dc9535df33e253f559501416ba
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812403"
-name: Microsoft Diagnostics and Recovery Toolset 6.5
+name: Microsoft Diagnostics en Recovery Toolset 6.5
 summary: >+
-  Microsoft Diagnostics and Recovery Toolset 6.5 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Diagnose- en herstelhulpmiddelenset van Microsoft 6.5 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
