--- a/lifecycle-data/products/microsoft-helmsman-40.yml
+++ b/lifecycle-data/products/microsoft-helmsman-40.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Helmsman 4.0
-  description: Microsoft Helmsman 4.0 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Helmsman 4.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: e873dcff7f9c115e7c0aa006d0a89b275f51c1a2
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812761"
 name: Microsoft Helmsman 4.0
 summary: >+
-  Microsoft Helmsman 4.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Helmsman 4.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
