--- a/lifecycle-data/products/microsoft-integration-designer-25.yml
+++ b/lifecycle-data/products/microsoft-integration-designer-25.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Integration Designer 2.5
-  description: Microsoft Integration Designer 2.5 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Integration Designer 2.5 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: a68b7d5749ce3c0bb47c949a59c52aff5a844dff
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812058"
 name: Microsoft Integration Designer 2.5
 summary: >+
-  Microsoft Integration Designer 2.5 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Integration Designer 2.5 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
