--- a/lifecycle-data/products/microsoft-office-access-2003.yml
+++ b/lifecycle-data/products/microsoft-office-access-2003.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Access 2003
-  description: Microsoft Office Access 2003 volgt het beleid voor een vaste levenscyclus.
+  description: Microsoft Office Access 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c987fede8716021d406466d7e02305cfe63b81ae
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812049"
 name: Microsoft Office Access 2003
 summary: >+
-  Microsoft Office Access 2003 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Access 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
