--- a/lifecycle-data/products/microsoft-office-excel-2003.yml
+++ b/lifecycle-data/products/microsoft-office-excel-2003.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Excel 2003
-  description: Microsoft Office Excel 2003 volgt het beleid voor een vaste levenscyclus.
+  description: Microsoft Office Excel 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 923ae08007681d7a78825036280098118e9ae817
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812046"
 name: Microsoft Office Excel 2003
 summary: >+
-  Microsoft Office Excel 2003 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Excel 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
