--- a/lifecycle-data/products/microsoft-office-frontpage-2003.yml
+++ b/lifecycle-data/products/microsoft-office-frontpage-2003.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office FrontPage 2003
-  description: Microsoft Office FrontPage 2003 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office FrontPage 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: eb7f001218c8b53cc1ebf75314ca5bd2b8b9a792
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812034"
 name: Microsoft Office FrontPage 2003
-summary: "Microsoft Office FrontPage 2003 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Microsoft Office FrontPage 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - office
 policyType: fixed
