--- a/lifecycle-data/products/microsoft-office-infopath-2003.yml
+++ b/lifecycle-data/products/microsoft-office-infopath-2003.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office InfoPath 2003
-  description: Microsoft Office InfoPath 2003 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office InfoPath 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c490e0240e02cc438b919d05116dc8595f3fedc3
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812031"
 name: Microsoft Office InfoPath 2003
 summary: >+
-  Microsoft Office InfoPath 2003 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office InfoPath 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
