--- a/lifecycle-data/products/microsoft-office-live-communications-server-2003.yml
+++ b/lifecycle-data/products/microsoft-office-live-communications-server-2003.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Live Communications Server 2003
-  description: Microsoft Office Live Communications Server 2003 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office Live Communications Server 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7f369f1316b72fd8eaebbe3b48dc0311474e947e
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812733"
 name: Microsoft Office Live Communications Server 2003
 summary: >+
-  Microsoft Office Live Communications Server 2003 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Live Communications Server 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
