--- a/lifecycle-data/products/microsoft-office-outlook-2003.yml
+++ b/lifecycle-data/products/microsoft-office-outlook-2003.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Outlook 2003
-  description: Microsoft Office Outlook 2003 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Office Outlook 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c40ff09ec9bcfbc662fb06ffeef34999e768ff6a
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812727"
 name: Microsoft Office Outlook 2003
 summary: >+
-  Microsoft Office Outlook 2003 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Outlook 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
