--- a/lifecycle-data/products/microsoft-powerpoint-2004-for-mac.yml
+++ b/lifecycle-data/products/microsoft-powerpoint-2004-for-mac.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft PowerPoint 2004 voor Mac
-  description: Microsoft PowerPoint 2004 voor Mac volgt het beleid voor een vaste levenscyclus.
+  description: Microsoft PowerPoint 2004 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7f246c660964e69224be7d0ad744b079e9fa0295
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812356"
 name: Microsoft PowerPoint 2004 voor Mac
 summary: >+
-  Microsoft PowerPoint 2004 voor Mac volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft PowerPoint 2004 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
