--- a/lifecycle-data/products/microsoft-word-2004-for-mac.yml
+++ b/lifecycle-data/products/microsoft-word-2004-for-mac.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Word 2004 voor Mac
-  description: Microsoft Word 2004 voor Mac volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Word 2004 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 043ba3e5d96ecd646c431b32b300d1d277ba577d
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812312"
 name: Microsoft Word 2004 voor Mac
-summary: "Microsoft Word 2004 voor Mac volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Microsoft Word 2004 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - office
 policyType: fixed-mainstream-only
