--- a/lifecycle-data/products/microsoft-word-2008-for-mac.yml
+++ b/lifecycle-data/products/microsoft-word-2008-for-mac.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Word 2008 voor Mac
-  description: Microsoft Word 2008 voor Mac volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Word 2008 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 275b237ac46d4769b7d8fbc434351c0cb156b638
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812308"
 name: Microsoft Word 2008 voor Mac
 summary: >+
-  Microsoft Word 2008 voor Mac volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Word 2008 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
