--- a/lifecycle-data/products/visual-j-net-version-11-redistributable-package.yml
+++ b/lifecycle-data/products/visual-j-net-version-11-redistributable-package.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Visual J# .NET Version 1.1 Herdistribueerbaar pakket
-  description: Visual J# .NET Version 1.1 Herdistribueerbaar pakket volgt het beleid voor vaste levenscyclus.
+  title: Herdistribueerbaar pakket voor Visual J# .NET Version 1.1
+  description: Herdistribueerbaar pakket voor Visual J# .NET Version 1.1 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 5cd64a881e213e1db23e4d7a0f7fe32baf3d8b12
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811912"
-name: Visual J# .NET Version 1.1 Herdistribueerbaar pakket
+name: Herdistribueerbaar pakket voor Visual J# .NET Version 1.1
 summary: >+
-  Visual J# .NET Version 1.1 Herdistribueerbaar pakket volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Herdistribueerbaar pakket voor Visual J# .NET Version 1.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
