--- a/lifecycle-data/products/windows-automotive-50.yml
+++ b/lifecycle-data/products/windows-automotive-50.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Automotive 5.0
-  description: Windows Automotive 5.0 volgt het beleid voor vaste levenscyclus.
+  description: Windows Automotive 5.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: a4f2c864058596a97be1ad6430eded5ccb422803
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811737"
 name: Windows Automotive 5.0
 summary: >
-  Windows Automotive 5.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Automotive 5.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed
