--- a/lifecycle-data/products/windows-ce-50.yml
+++ b/lifecycle-data/products/windows-ce-50.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows CE 5.0
-  description: Windows CE 5.0 volgt het beleid voor vaste levenscyclus.
+  description: Windows CE 5.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 61aca29aa9f4eb5cca148ffc0405031322185cc6
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811741"
 name: Windows CE 5.0
 summary: >+
-  Windows CE 5.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows CE 5.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
