--- a/lifecycle-data/products/windows-embedded-ce-60.yml
+++ b/lifecycle-data/products/windows-embedded-ce-60.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Embedded CE 6.0
-  description: Windows Embedded CE 6.0 volgt het beleid voor vaste levenscyclus.
+  description: Windows Embedded CE 6.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: a4dcc45afc796f07ef8606d1130588a449bd0e8f
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812268"
 name: Windows Embedded CE 6.0
 summary: >
-  Windows Embedded CE 6.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Embedded CE 6.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed
