--- a/lifecycle-data/products/windows-home-server.yml
+++ b/lifecycle-data/products/windows-home-server.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Home Server
-  description: Windows Home Server volgt het beleid voor vaste levenscyclus.
+  description: Windows Home Server volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7858655cfe6489b145f6ec8ef4d2d113c0a1e22b
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "812257"
 name: Windows Home Server
 summary: >+
-  Windows Home Server volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Home Server volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
