--- a/lifecycle-data/products/windows-identity-foundation.yml
+++ b/lifecycle-data/products/windows-identity-foundation.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Identity Foundation
-  description: Windows Identity Foundation volgt het beleid voor vaste levenscyclus.
+  description: Windows Identity Foundation volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: bf0feb07b0de728c2a1e19c8e9476a943719a6b6
   ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/28/2020
   ms.locfileid: "811735"
 name: Windows Identity Foundation
 summary: >+
-  Windows Identity Foundation volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Identity Foundation volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
